@@ -295,3 +295,12 @@ https://github.com/aws/aws-sdk-go[AWS SDK Go].
 
 See <<builtin-modules-apmawssdkgo, module/apmawssdkgo>> for more information
 about AWS SDK Go instrumentation.
+
+[float]
+[[supported-tech-messaging-systems]]
+=== Object Storage
+We provide instrumentation for AWS SQS. This is usable with
+https://github.com/aws/aws-sdk-go[AWS SDK Go].
+
+See <<builtin-modules-apmawssdkgo, module/apmawssdkgo>> for more information
+about AWS SDK Go instrumentation.
